Add user my location button with geolocation weathe fetching

--- a/src/app/components/weather/weather.component.html
+++ b/src/app/components/weather/weather.component.html
@@ -13,3 +13,10 @@
     Search
   </button>
 </div>
+
+<button
+  (click)="getWeatherByLocation()"
+  class="mt-2 bg-green-500 text-white px-4 py-2 rounded"
+>
+  Use My Location
+</button>
